1.fix 编译失败的问题